Add text_white class to heading and footer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <!-- Header -->
-        <header>
+        <header class="text-white">
             <p class="logo">Header logo</p>
             <nav class="header_nav">
                 <ul class="list_header_nav">
@@ -79,7 +79,7 @@
 
         
         <!-- Footer -->
-        <footer>
+        <footer class="text-white">
             <p class="text_footer">Copyright &copy The Odin Project 2022</p>
 
 
