--- a/index.html
+++ b/index.html
@@ -8,84 +8,86 @@
     <title>Landing page</title>
 </head>
 <body>
-    <div class="container">
         <!-- Header -->
-        <header class="text-white">
-            <p class="logo">Header logo</p>
-            <nav class="header_nav">
+        <header>
+            <div class="container">
+                <p class="logo">Header logo</p>
                 <ul class="list_header_nav">
-                    <li>header link 1</li>
-                    <li>header link 2</li>
-                    <li>header link 3</li>
+                    <li><a href="">header link 1</a></li>
+                    <li><a href="">header link 2</a></li>
+                    <li><a href="">header link 3</a></li>
                 </ul>
-            </nav>
+            </div>
         </header>
 
 
         <!-- Hero section -->
         <div class="section_hero">
-            <div class="section_hero_left text-white">
-                <h1 class="heading_section_hero_left">This website is awesome</h1>
-                <p class="text_heading_section_hero_left text_white_lowercontrast">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dictumst vestibulum rhoncus est pellentesque elit ullamcorper.</p>
-                <a class="btn_heading_section_left">Sign up</a>
-            </div>
-            <div class="section_hero_right">
-                <img src="img/hero_img.jpg" alt="" height="386" width="640">
+            <div class="container">
+                <div class="section_hero_left">
+                    <h1 class="heading_section_hero_left">This website is awesome</h1>
+                    <p class="text_heading_section_hero_left text_white_lowercontrast">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dictumst vestibulum rhoncus est pellentesque elit ullamcorper.</p>
+                    <a class="btn_heading_section_left">Sign up</a>
+                </div>
+                <div class="section_hero_right">
+                    <img src="img/hero_img.jpg" alt="" height="386" width="640">
+                </div>
             </div>
         </div>
 
 
         <!-- Info section -->
         <div class="section_info">
-            <h2>Some random information</h2>
-            <ul class="list_section_info">
-                <li>
-                    <img class="img_list_section_info" src="" width="200" height="200" alt="">
-                    <p  class="text_list_seciton_info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                </li>
-                <li>
-                    <img class="img_list_section_info" src="" width="200" height="200" alt="">
-                    <p  class="text_list_seciton_info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                </li>
-                <li>
-                    <img class="img_list_section_info" src="" width="200" height="200" alt="">
-                    <p  class="text_list_seciton_info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                </li>
-                <li>
-                    <img class="img_list_section_info" src="" width="200" height="200" alt="">
-                    <p  class="text_list_seciton_info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                </li>
-            </ul>
+            <div class="container">
+                <h2>Some random information</h2>
+                <ul class="list_section_info">
+                    <li>
+                        <img class="img_list_section_info" src="img/image_section_info_1.jpg" width="200" height="200" alt="">
+                        <p  class="text_list_seciton_info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </li>
+                    <li>
+                        <img class="img_list_section_info" src="img/image_section_info_2.jpg" width="200" height="200" alt="">
+                        <p  class="text_list_seciton_info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </li>
+                    <li>
+                        <img class="img_list_section_info" src="img/image_section_info_3.jpg" width="200" height="200" alt="">
+                        <p  class="text_list_seciton_info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </li>
+                    <li>
+                        <img class="img_list_section_info" src="img/image_section_info_4.jpg" width="200" height="200" alt="">
+                        <p  class="text_list_seciton_info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </li>
+                </ul>
+            </div>
         </div>
 
 
         <!-- Quote section -->
         <div class="section_quote">
-            <p class="text_section_quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Bibendum est ultricies integer quis auctor.</p>
-            <p class="text_section_quote_author">Thor, God of Thunder</p>
+            <div class="container">
+                <p class="text_section_quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Bibendum est ultricies integer quis auctor.</p>
+                <p class="text_section_quote_author">Thor, God of Thunder</p>
+            </div>
         </div>
 
 
         <!-- CTA section -->
-        <div class="section_cta text-white">
-            <div class="section_cta_left">
-                <h3 class="heading_section_cta_left">Call to action! It's time!</h3>
-                <p class="text_section_cta_left">Sign up for our product by clicking the button right over there!</p>
+        <div class="section_cta">
+            <div class="container">
+                <div class="section_cta_left">
+                    <h3 class="heading_section_cta_left">Call to action! It's time!</h3>
+                    <p class="text_section_cta_left">Sign up for our product by clicking the button right over there!</p>
+                </div>
+                <div class="section_cta_right">
+                    <a class="btn_section_cta_right">Sign up</a>
+                </div>
             </div>
-            <div class="section_cta_right">
-                <a class="btn_section_cta_right">Sign up</a>
-            </div>
-        </div>
 
         
         <!-- Footer -->
-        <footer class="text-white">
+        <footer class="section_footer text-white">
             <p class="text_footer">Copyright &copy The Odin Project 2022</p>
-
-
         </footer>
-
-    </div>
     
 </body>
 </html>
