Remove text_white class

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <div class="section_hero">
             <div class="container">
                 <div class="section_hero_left">
-                    <h1 class="heading_section_hero_left">This website is awesome</h1>
-                    <p class="text_heading_section_hero_left text_white_lowercontrast">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dictumst vestibulum rhoncus est pellentesque elit ullamcorper.</p>
-                    <a class="btn_heading_section_left">Sign up</a>
+                    <h1>This website is awesome</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dictumst vestibulum rhoncus est pellentesque elit ullamcorper.</p>
+                    <a>Sign up</a>
                 </div>
                 <div class="section_hero_right">
                     <img src="img/hero_img.jpg" alt="" height="386" width="640">
@@ -43,19 +43,19 @@
                 <ul class="list_section_info">
                     <li>
                         <img class="img_list_section_info" src="img/image_section_info_1.jpg" width="200" height="200" alt="">
-                        <p  class="text_list_seciton_info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p  class="text_list_seciton_info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
                     </li>
                     <li>
                         <img class="img_list_section_info" src="img/image_section_info_2.jpg" width="200" height="200" alt="">
-                        <p  class="text_list_seciton_info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p  class="text_list_seciton_info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     </li>
                     <li>
                         <img class="img_list_section_info" src="img/image_section_info_3.jpg" width="200" height="200" alt="">
-                        <p  class="text_list_seciton_info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p  class="text_list_seciton_info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     </li>
                     <li>
                         <img class="img_list_section_info" src="img/image_section_info_4.jpg" width="200" height="200" alt="">
-                        <p  class="text_list_seciton_info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p  class="text_list_seciton_info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     </li>
                 </ul>
             </div>
@@ -66,7 +66,7 @@
         <div class="section_quote">
             <div class="container">
                 <p class="text_section_quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Bibendum est ultricies integer quis auctor.</p>
-                <p class="text_section_quote_author">Thor, God of Thunder</p>
+                <p class="text_section_quote_author">&#8212 Thor, God of Thunder</p>
             </div>
         </div>
 
@@ -75,17 +75,17 @@
         <div class="section_cta">
             <div class="container">
                 <div class="section_cta_left">
-                    <h3 class="heading_section_cta_left">Call to action! It's time!</h3>
-                    <p class="text_section_cta_left">Sign up for our product by clicking the button right over there!</p>
+                    <h3>Call to action! It's time!</h3>
+                    <p>Sign up for our product by clicking the button right over there!</p>
                 </div>
                 <div class="section_cta_right">
-                    <a class="btn_section_cta_right">Sign up</a>
+                    <a>Sign up</a>
                 </div>
             </div>
 
         
         <!-- Footer -->
-        <footer class="section_footer text-white">
+        <footer>
             <p class="text_footer">Copyright &copy The Odin Project 2022</p>
         </footer>
     
